@@ -139,6 +139,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - NewLisp                cormullion
 - NSIS                   Tux, Deguix
 - Oberon-2               Mike Mol
+- Objeck Progr. Lang.    Randy Hollines
 - Objective C            M. Uli Kusterer
 - Ocaml                  Flaie
 - Ocaml-brief            Flaie
