@@ -16,6 +16,7 @@ Version 1.0.8.9
   -  Added language files
      * Algol68 (Neville Dempsey)
      * FormulaOne (Juro Bystricky)
+     * Objeck Programming Language (Randy Hollines)
 Version 1.0.8.8
   -  Added language files
      * ChaiScript (Jason Turner & Jonathan Turner)
